<resources>
    <string name="app_Name">E05</string>


    <string name="tv_ClassMenu">飲料種類</string>
    <string name="C1_Coffee">咖啡(40)</string>
    <string name="C2_RedTea">紅茶(50)</string>
    <string name="C3_Milktea">奶茶(60)</string>
    <string name="C4_Greentea">綠茶(70)</string>

    <string name="tv_SugarMenu">糖分選擇</string>
    <string name="f1_Normal">正常糖</string>
    <string name="f2_Half">半糖</string>
    <string name="f3_Less">少糖</string>
    <string name="f4_No">無糖</string>

    <string name="tv_iceMenu">冰塊份量</string>
    <string name="i1_Normal">正常冰</string>
    <string name="i2_Half">微冰</string>
    <string name="i3_Less">去冰</string>
    <string name="i4_Hot">熱</string>

    <string name="ck_pgtext">需要袋子 +1 元</string>
    <string name="ck_pmtext">需要珍珠 +5 元</string>

    <string name="bt_text">送出</string>
    <string name="app_name">MyStore</string>
    <string name="tv_total">$0</string>
</resources>
